enabled sharring of order component between add and edit orders

--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -1,94 +1,2 @@
-<h1>{{viewClass}}</h1>
-
-<form [formGroup]="myForm" (ngSubmit)="submitHandler()" class="form-flex">
-    <div class="row top">
-        <div class="col-sm">
-            <mat-form-field>
-                <input matInput placeholder="First Name" formControlName="first_name">
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Last Name" formControlName="last_name">
-            </mat-form-field>
-
-            <mat-form-field>
-                <input type="telephone" matInput placeholder="téléphone" formControlName="telephone">
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="date">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Filter organizedItems" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
-            </mat-form-field>
-            <!-- Don't think we need this field
-            <mat-form-field>
-                <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
-            </mat-form-field>
-            -->
-        </div>
-    </div>
-    <div class="row flex-row">
-        <div class="col-sm">
-
-            <h4>Viennoiserie</h4>
-            <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of organizedItems.viennoiserie | searchFilter: searchText">
-                    <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
-                </mat-form-field>
-            </mat-dialog-content>
-        </div>
-        <div class="col-6 wrap">
-            <h4>Pains</h4>
-            <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of organizedItems.pains| searchFilter: searchText " [class.sliced]="item.sliced_option">
-                    <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
-                </mat-form-field>
-            </mat-dialog-content>
-        </div>
-        <div class="col-sm">
-            <h4>Nöel</h4>
-            <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of organizedItems.noel | searchFilter: searchText">
-                    <input type="number" matInput autocomplete="off" placeholder=" {{item.name}} " formControlName="{{item.name}}">
-                </mat-form-field>
-            </mat-dialog-content>
-
-            <!--<div class="item-field">
-                        <label for="bread">{{item.name}}</label>
-                        <input class="ml-1" type="number" id="bread" matInput autocomplete="off" placeholder="0" #input formControlName="{{item.name}}">
-                        <div class="incrementers ml-1">
-                            <svg (click)="increment(input)" width="1em" height="1em" viewBox="0 0 16 16" class="ml-1 bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                          </svg>
-
-                            <svg (click)="decrement(input)" width="1em" height="1em" viewBox="0 0 16 16" class="ml-1 bi bi-dash-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                            <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
-                          </svg>
-
-                        </div>
-                    </div>
-                -->
-        </div>
-
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Save Order</button>
-            <button *ngIf="edit" mat-button type="button" class="btn btn-danger ml-1" (click)="delete()">Delete</button>
-        </div>
-        <div class="col-sm ">
-            <div class="total_price ">
-                <span class="subheading ">Subtotal: </span><span class="subheadingbold ">{{ sub_total | currency }} </span>
-                <span class="subheading ">Tax: </span><span class="subheadingbold ">{{tax | currency }} </span>
-                <span class="subheading ">Total: </span><span class="subheadingbold ">{{ total | currency }} </span>
-
-            </div>
-        </div>
-    </div>
-
-</form>
+<p>edit-order works!</p>
+<app-order-form [orderData]="orderData" [myForm]="myForm" (itemOrderEmitter)="submitForm($event)"></app-order-form>
