--- a/src/app/dashboard/all-orders/all-orders.component.html
+++ b/src/app/dashboard/all-orders/all-orders.component.html
@@ -2,33 +2,42 @@
   <ng-container matColumnDef="first_name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
     <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="last_name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
     <td mat-cell *matCellDef="let item"> {{item.last_name}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="telephone">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> telephone </th>
     <td mat-cell *matCellDef="let item"> {{item.telephone}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
 
   <!-- Count -->
   <ng-container matColumnDef="summary">
     <th mat-header-cell *matHeaderCellDef> Summary </th>
     <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
     <td mat-cell *matCellDef="let item"> {{ item.total | currency }} </td>
+    <td mat-footer-cell *matFooterCellDef> {{totalCost | currency}} </td>
   </ng-container>
   <ng-container matColumnDef="date" *ngIf="!forDate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
     <td mat-cell *matCellDef="let item"> {{ item.date.toDate() | date :'mediumDate'}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="no-print"> Details </th>
     <td class="no-print" mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
   <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+  <tr mat-footer-row *matFooterRowDef="columns"></tr>
+
 </table>
