translated everything to french

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -3,10 +3,11 @@
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()">
 
     <mat-form-field>
-        <input matInput placeholder="name" formControlName="name">
+      <mat-label>Nom</mat-label>
+        <input matInput  formControlName="name">
     </mat-form-field>
     <mat-form-field appearance="fill">
-        <mat-label>Type of item</mat-label>
+        <mat-label>Type d'aliment</mat-label>
         <mat-select formControlName="item_type">
             <mat-option *ngFor="let type of types" [value]="type.value">
                 {{type.viewValue}}
@@ -14,7 +15,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
-        <mat-label>Tax classification</mat-label>
+        <mat-label>Classification des taxes</mat-label>
         <mat-select formControlName="tax_catagory">
             <mat-option *ngFor="let type of tax_classifications" [value]="type.value">
                 {{type.viewValue}}
@@ -22,18 +23,20 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
+      <mat-label>choisir l'option de tranche</mat-label>
         <mat-select formControlName="sliced_option">
             <mat-option [value]="false">
-                No Slice Option
+              Option sans tranche
             </mat-option>
             <mat-option [value]="true">
-                Include sliced Option
+              Inclure l'option tranchée
             </mat-option>
         </mat-select>
     </mat-form-field>
     <mat-form-field>
-        <input matInput placeholder="price" formControlName="price">
+      <mat-label>Prix</mat-label>
+        <input matInput  formControlName="price">
     </mat-form-field>
 
-    <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Add Item</button>
+    <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Ajouter Aliment</button>
 </form>
