--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="row">
         <div class="col-sm mt-3">
-            <button (click)="openDialog()" class="btn btn-primary">Add Item</button>
+            <button (click)="openDialog()" class="btn btn-primary">Ajouter Un Aliment</button>
             <table mat-table [dataSource]="dataSource" matSort class="table-max mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom </th>
                     <td mat-cell *matCellDef="let item"> {{item.name | capitalize}} </td>
                 </ng-container>
                 <!-- Item name -->
@@ -19,12 +19,12 @@
 
                 <!-- Count -->
                 <ng-container matColumnDef="price">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> price </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> prix </th>
                     <td mat-cell *matCellDef="let item"> {{item.price |currency }} </td>
                 </ng-container>
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary" (click)="editItemDialog(item)">Edit</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary" (click)="editItemDialog(item)">Modifier</button> </td>
                 </ng-container>
 
 
