--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             </div>
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Nom d'utilisateur</label>
                     <input
                     type="text"
                     id="username"
@@ -18,7 +18,7 @@
                     >
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Mot de passe</label>
                     <input
                     type="password"
                     id="password"
@@ -31,7 +31,7 @@
                 </div>
                 <div>
                     <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">Login</button>
-                    <button class="btn btn-primary" type="button" (click)="signUp()">Sign Up</button>
+                    <button class="btn btn-primary" type="button" (click)="signUp()" style="margin-left: 10px;">Sign Up</button>
                 </div>
             </form>
         </div>
