--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,7 @@
             </div>
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Nom d'utilisateur</label>
                     <input
                     type="text"
                     id="username"
@@ -18,7 +18,7 @@
                     >
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Mot de passe</label>
                     <input
                     type="password"
                     id="password"
@@ -30,9 +30,9 @@
                     #password="ngModel"
                     >
                 </div>
-                <span *ngIf="!password.valid && password.touched" class="help-block alert alert-danger">Password must be at least 6 characters</span>
+                <span *ngIf="!password.valid && password.touched" class="help-block alert alert-danger">Le mot de passe doit comporter au moins 6 caractères</span>
                 <div class="form-group">
-                    <label for="passwordConf">Password Confirmation</label>
+                    <label for="passwordConf">Confirmation du mot de passe</label>
                     <input
                     type="password"
                     id="passwordConf"
@@ -44,10 +44,10 @@
                     #passwordConf="ngModel"
                     >
                 </div>
-                <span *ngIf="!passwordConf.valid && passwordConf.touched" class="help-block alert alert-danger">Password Confirmation must be at least 6 characters</span>
+                <span *ngIf="!passwordConf.valid && passwordConf.touched" class="help-block alert alert-danger">Le mot de passe doit comporter au moins 6 caractères</span>
                 <div>
                     <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">Submit</button>
-                    <button class="btn btn-primary" type="button" (click)="login()">Login</button>
+                    <button class="btn btn-primary" type="button" (click)="login()" style="margin-left: 10px;">Login</button>
                 </div>
             </form>
         </div>
