removed drop shadow for table

--- a/src/app/dashboard/all-orders/all-orders.component.html
+++ b/src/app/dashboard/all-orders/all-orders.component.html
@@ -1,4 +1,4 @@
-<table mat-table #firstTable #firstTableSort="matSort" [dataSource]="allOrders" matSort class="mat-elevation-z8 mt-3 table-max">
+<table mat-table #firstTable #firstTableSort="matSort" [dataSource]="allOrders" matSort class=" mt-1 table-max">
   <ng-container matColumnDef="first_name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Prénom </th>
     <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
