--- a/src/app/dashboard/production-quantities/production-quantities.component.html
+++ b/src/app/dashboard/production-quantities/production-quantities.component.html
@@ -1,4 +1,4 @@
-<table id="orderAmountTable" #thirdTable #thirdTableSort="matSort" mat-table [dataSource]="productionQuantitesData" matSort class="mat-elevation-z8 mt-3 table-max">
+<table id="orderAmountTable" #thirdTable #thirdTableSort="matSort" mat-table [dataSource]="productionQuantitesData" matSort class=" mt-2 table-max">
   <!-- Item name -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
